[package]
name = "gtk4-helper"
version = "0.1.0"
authors = ["Nico Just <mail@njust.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
gtk4 = {git = "https://github.com/njust/gtk4-rs.git"}
gio = {git = "https://github.com/gtk-rs/gtk-rs"}
futures = "0.3.13"
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
tokio = { version = "0.2", features = ["full", "macros"] }
once_cell = "1.7.2"
gtk4-helper-macros = { path = "../gtk4-helper-macros" }