[package]
name = "gtk4-helper"
version = "0.1.0"
authors = ["Nico Just <mail@njust.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
#gtk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gtk4" }
gtk = {version = "0.4.8", package = "gtk4"}
futures = "0.3.21"
tokio = { version = "1.19.0", features = ["full", "macros"] }
once_cell = "1.2.0"
gtk4-helper-macros = { path = "../gtk4-helper-macros" }